# rwa

./: README.md  pyproject.toml
src/tagg/: aggregate.py  cli.py
tests/tagg/: test_aggregate.py
